--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@vueup/vue-quill": "^1.2.0",
     "bootstrap": "^5.3.2",
     "firebase": "^10.4.0",
     "pinia": "^2.1.6",
