--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
     "@vueup/vue-quill": "^1.2.0",
     "bootstrap": "^5.3.2",
     "firebase": "^10.4.0",
